--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -8,7 +8,7 @@
     <!-- Ícone da página (favicon) -->
     <link
       rel="shortcut icon"
-      href="../assets/imgs/icon.png"
+      href="../assets/imgs/icon.webp"
       type="image/x-icon"
     />
 
@@ -40,7 +40,7 @@
     />
     <meta
       property="og:image"
-      content="https://i.ibb.co/JzsHKTv/Filing-system-amico.png"
+      content="https://i.ibb.co/JzsHKTv/Filing-system-amico.webp"
     />
     <meta property="og:url" content="https://www.gaviaofrutas.com.br" />
     <meta property="og:type" content="website" />
@@ -57,7 +57,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://gaviaofrutas.com.br/assets/dan-gold-4_jhDO54BYg-unsplash.jpg"
+      content="https://gaviaofrutas.com.br/assets/dan-gold-4_jhDO54BYg-unsplash.webp"
     />
 
     <!-- Links para fontes e ícones -->
@@ -115,7 +115,7 @@
         "@type": "Organization",
         "name": "Gavião Frutas e Alimentos",
         "url": "https://www.gaviaofrutas.com.br",
-        "logo": "https://i.ibb.co/JzsHKTv/Filing-system-amico.png",
+        "logo": "https://i.ibb.co/JzsHKTv/Filing-system-amico.webp",
         "description": "Gavião Frutas e Alimentos é um atacadista de frutas e verduras localizado em Santa Luzia do Norte, AL. Oferecemos uma ampla variedade de produtos frescos, cuidadosamente selecionados para garantir qualidade e sabor. Nosso compromisso é fornecer aos nossos clientes os melhores alimentos para uma vida saudável e equilibrada.",
         "contactPoint": {
           "@type": "ContactPoint",
@@ -159,7 +159,7 @@
       <nav class="menu-wrap">
         <a href="index.html#home" class="logo">
           <img
-            src="../assets/imgs/logo.png"
+            src="../assets/imgs/logo.webp"
             alt="logo gavião frutas"
             loading="lazy"
           />
@@ -194,7 +194,7 @@
     <section id="home" class="bannerInitial">
       <figure class="imgBannerCatalog">
         <img
-          src="../assets/imgs/manFruit.png"
+          src="../assets/imgs/manFruit.webp"
           alt="Página Catálogo"
           loading="lazy"
         />
