--- a/pages/login.html
+++ b/pages/login.html
@@ -14,7 +14,7 @@
     />
     <link
       rel="shortcut icon"
-      href="../assets/imgs/icon.png"
+      href="../assets/imgs/icon.webp"
       type="image/x-icon"
     />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -23,7 +23,6 @@
   </head>
 
   <body>
-    <!-- Formulário de login e registro -->
     <div class="container boxForms">
       <div class="forms-container">
         <div class="beforeSlide"></div>
@@ -108,7 +107,7 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <img
-            src="..//assets/imgs/manPhone.png"
+            src="..//assets/imgs/manPhone.webp"
             alt="Página Login"
             class="image"
             loading="lazy"
@@ -116,7 +115,7 @@
         </div>
         <div class="panel right-panel">
           <img
-            src="..//assets/imgs/womanPhone.png"
+            src="..//assets/imgs/womanPhone.webp"
             class="image womanArrow"
             loading="lazy"
             alt="Página Cadastro"
