--- a/index.html
+++ b/index.html
@@ -141,11 +141,7 @@
     <header class="nav">
       <nav class="menu-wrap">
         <a href="#home" class="logo">
-          <img
-            src="assets/imgs/logo.webp"
-            alt="Logo Gavião Frutas"
-            loading="lazy"
-          />
+          <img src="assets/imgs/logo.webp" alt="Logo Gavião Frutas" />
           <h2>Gavião Frutas</h2>
         </a>
 
@@ -208,11 +204,7 @@
       </div>
 
       <figure>
-        <img
-          src="assets/imgs/womanfruit.webp"
-          alt="Página Inicial"
-          loading="lazy"
-        />
+        <img src="assets/imgs/womanfruit.webp" alt="Página Inicial" />
         <div></div>
       </figure>
     </section>
@@ -220,7 +212,7 @@
     <section class="carrossel container" id="carrossel1">
       <div class="food-menu">
         <div>
-          <h1>Ofertas Especiais</h1>
+          <h2>Ofertas Especiais</h2>
           <p>Confira abaixo os alimentos em promoção</p>
         </div>
         <a href="./pages/catalogo.html">Ver mais</a>
@@ -237,11 +229,7 @@
     <section class="about container" id="about">
       <div class="boxAbout">
         <figure>
-          <img
-            src="assets/imgs/backgroundAbout.webp"
-            alt="Escolha Saudável"
-            loading="lazy"
-          />
+          <img src="assets/imgs/backgroundAbout.webp" alt="Escolha Saudável" />
         </figure>
         <figcaption>
           <div>
@@ -293,20 +281,24 @@
           <ul>
             <li>
               <a
+                title="Whatsapp"
                 href="https://api.whatsapp.com/send/?phone=5582987114659&text&type=phone_number&app_absent=0"
                 target="_blank"
                 ><i class="fab fa-whatsapp buttonAll active"></i
               ></a>
             </li>
             <li>
-              <a href="https://www.instagram.com/gaviao_fr/" target="_blank"
+              <a
+                href="https://www.instagram.com/gaviao_fr/"
+                title="Instagram"
+                target="_blank"
                 ><i class="fab fa-instagram buttonAll active"></i
               ></a>
             </li>
           </ul>
         </figcaption>
 
-        <img src="assets/imgs/contacts.webp" alt="Contato" loading="lazy" />
+        <img src="assets/imgs/contacts.webp" alt="Contato" />
       </div>
     </div>
 
@@ -346,7 +338,7 @@
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.938522561456!2d-35.82500931691304!3d-9.600562277432925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701490160ded679%3A0xa06f375f5c8af1c8!2sGavi%C3%A3o%20frutas!5e0!3m2!1spt-BR!2sbr!4v1716677738880!5m2!1spt-BR!2sbr"
         allowfullscreen=""
-        loading="lazy"
+        title="googlemaps"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
@@ -400,7 +392,7 @@
           </ul>
         </div>
       </div>
-      <h6>© 2024 Gavião Frutas - Todos os direitos reservados</h6>
+      <h5>© 2024 Gavião Frutas - Todos os direitos reservados</h5>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
