--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -142,6 +142,7 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
+        title="googlemaps"
         src="https://www.googletagmanager.com/ns.html?id=GTM-T2X3JWG"
         height="0"
         width="0"
@@ -158,11 +159,7 @@
     <header class="nav">
       <nav class="menu-wrap">
         <a href="index.html#home" class="logo">
-          <img
-            src="../assets/imgs/logo.webp"
-            alt="logo gavião frutas"
-            loading="lazy"
-          />
+          <img src="../assets/imgs/logo.webp" alt="logo gavião frutas" />
           <h2>Gavião Frutas</h2>
         </a>
 
@@ -193,19 +190,15 @@
     <!-- BANNER INITIAL -->
     <section id="home" class="bannerInitial">
       <figure class="imgBannerCatalog">
-        <img
-          src="../assets/imgs/manFruit.webp"
-          alt="Página Catálogo"
-          loading="lazy"
-        />
+        <img src="../assets/imgs/manFruit.webp" alt="Página Catálogo" />
         <div></div>
       </figure>
       <div class="bannerTexts textsCatalog">
         <h1>Nosso Catálogo</h1>
         <p>
-          Bem-vindo à Gavião Frutas! Frutas e verduras frescas entregues em
-          <strong></strong>. Encomende agora e desfrute de alimentos saudáveis e
-          saborosos.
+          Bem-vindo à Gavião Frutas! Entregamos frutas e verduras frescas
+          diretamente na sua casa. Encomende agora e desfrute de alimentos
+          saudáveis e saborosos.
         </p>
         <a
           href="https://api.whatsapp.com/send/?phone=5582987114659&text&type=phone_number&app_absent=0"
@@ -307,7 +300,6 @@
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3933.938522561456!2d-35.82500931691304!3d-9.600562277432925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x701490160ded679%3A0xa06f375f5c8af1c8!2sGavi%C3%A3o%20frutas!5e0!3m2!1spt-BR!2sbr!4v1716677738880!5m2!1spt-BR!2sbr"
         allowfullscreen=""
-        loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       ></iframe>
     </section>
@@ -363,7 +355,7 @@
           </ul>
         </div>
       </div>
-      <h6>© 2024 Gavião Frutas - Todos os direitos reservados</h6>
+      <h5>© 2024 Gavião Frutas - Todos os direitos reservados</h5>
     </footer>
 
     <!-- SCRIPTS -->
