--- a/pages/login.html
+++ b/pages/login.html
@@ -139,7 +139,7 @@
       const user = getUserLogged();
       const usernameElement = document.getElementById("username");
       if (user) {
-        window.location.href='../bem-vindo.html'
+        window.location.href='bem-vindo.html'
       } 
     </script>
 
