--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="carrinho.css" />
-
+    <link rel="stylesheet" href="pages/login.css" />
+    
+    <script src="pages/getUserData.js"></script>
     <script src="carrinho.js" defer></script>
 
     <script>
@@ -181,6 +183,13 @@
           <button class="checkout-btn buttonAll">Finalizar Compra</button>
         </div>
       </div>
+      <!-- Mostrando usuario logado na page -->
+      <form action="#" class="sign-in-form" id="loginForm">
+        <h2 class="title">Bem vindo <span id="username"></span></h2>
+        <div class="buttons">
+          <button type="button" class="btn solid buttonAll" onclick="logout()">Deslogar</button>
+        </div>
+      </form>
     </div>
 
     <section id="home" class="bannerInitial">
