Pages problem resolved

--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="carrinho.css" />
     <link rel="stylesheet" href="pages/login.css" />
-    
+    <!-- getUserData para mostrar o usuario logado na pagina -->
     <script src="pages/getUserData.js"></script>
+
     <script src="carrinho.js" defer></script>
 
     <script>
