--- a/pages/login.html
+++ b/pages/login.html
@@ -134,15 +134,8 @@
     ></script>
     <script src="login.js"></script>
     <script src="../icons/fontawesome.js"></script>
+    <script src="../index.js"></script>
     <script src="getUserData.js"></script>
-    <script>
-      const user = getUserLogged();
-      const usernameElement = document.getElementById("username");
-      if (user) {
-        window.location.href='bem-vindo.html'
-      } 
-    </script>
-
     
   </body>
 </html>
