--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -87,6 +87,8 @@
 
     <!-- Script deferido -->
     <script src="../carrinho.js" defer></script>
+    <!-- getUserData para mostrar o usuario logado na pagina -->
+    <script src="getUserData.js" defer></script>
 
     <!-- Google Tag Manager -->
     <script>
@@ -227,6 +229,13 @@
           <button class="checkout-btn buttonAll">Finalizar Compra</button>
         </div>
       </div>
+            <!-- Mostrando usuario logado na page -->
+            <form action="#" class="sign-in-form" id="loginForm">
+              <h2 class="title">Bem vindo <span id="username"></span></h2>
+              <div class="buttons">
+                <button type="button" class="btn solid buttonAll" onclick="logout()">Deslogar</button>
+              </div>
+            </form>
     </div>
     <!-- CARROSSEL PROMOÇÕES -->
     <section class="carrossel container" id="carrossel1">
