--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
       <form action="#" class="sign-in-form" id="loginForm">
         <h2 class="title">Bem vindo <span id="username"></span></h2>
         <div class="buttons">
-          <button type="button" class="btn solid buttonAll" onclick="logout()">Deslogar</button>
+          <button type="button" class="btn solid buttonAll" id="logoutButton" onclick="logout()">Deslogar</button>
+          <button type="button" class="btn solid buttonAll" id="loginButton" onclick="login()" style="display: none;">Logar</button>
         </div>
       </form>
     </div>
