--- a/pages/login.html
+++ b/pages/login.html
@@ -84,9 +84,17 @@
               <div class="input-field">
                 <i class="fas fa-map-marker-alt"></i>
                 <select name="bairros" id="signupBairro">
-                  <option value="bairro 1">Bairro Exemplo</option>
-                  <option value="bairro 2">Bairro 2</option>
-                  <option value="bairro 3">Bairro 3</option>
+                  <option value="GUARDIANO">GUARDIANO</option>
+                  <option value="CASAS NOVAS - GUARDIANO">CASAS NOVAS - GUARDIANO</option>
+                  <option value="PAGÃO">PAGÃO</option>
+                  <option value="CENTRO">CENTRO</option>
+                  <option value="QUILOMBO">QUILOMBO</option>
+                  <option value="PORTO">PORTO</option>
+                  <option value="CASAS NOVAS - PORTO">CASAS NOVAS - PORTO</option>
+                  <option value="ALTO DO CEMITERIO">ALTO DO CEMITERIO</option>
+                  <option value="TREZE DE DEZEMBRO">TREZE DE DEZEMBRO</option>
+                  <option value="CIDADE DE DEUS">CIDADE DE DEUS</option>
+                  <option value="MULTIRÃO">MULTIRÃO</option>
                 </select>
               </div>
               <div class="input-field">
