back button and bug fixes

--- a/pages/login.html
+++ b/pages/login.html
@@ -26,6 +26,10 @@
 
   <body>
     <div class="container boxForms">
+      <a href="..//index.html" class="buttonBack">
+        <i class="fal fa-arrow-left"></i>
+        <p>Voltar</p>
+      </a>
       <div class="forms-container">
         <div class="beforeSlide"></div>
         <div class="signin-signup">
