--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <li><a href="#about">Sobre Nós</a></li>
           <li><a href="pages/catalogo.html">Catálogo</a></li>
           <li><a href="#contacts">Contatos</a></li>
-          <li><a class="loginLink" href="pages/login.html">Login</a></li>
+          <li id="loginLink"><a class="loginLink" href="pages/login.html">Login</a></li>
         </ul>
 
         <div class="btnCart" onclick="openCartMenu()">
