resolving vercel logs error

--- a/pages/login.html
+++ b/pages/login.html
@@ -48,7 +48,7 @@
               <input
                 type="text"
                 id="loginUsername"
-                placeholder="Nome de usuário"
+                placeholder="E-mail"
               />
             </div>
             <div class="input-field">
