Solve alerta logs

--- a/pages/login.html
+++ b/pages/login.html
@@ -26,7 +26,7 @@
 
   <body>
     <div class="container boxForms">
-      <a href="..//index.html" class="buttonBack">
+      <a href="../index.html" class="buttonBack">
         <i class="fal fa-arrow-left"></i>
         <p>Voltar</p>
       </a>
@@ -121,7 +121,7 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <img
-            src="..//assets/imgs/manPhone.webp"
+            src="../assets/imgs/manPhone.webp"
             alt="Página Login"
             class="image"
             loading="lazy"
@@ -129,7 +129,7 @@
         </div>
         <div class="panel right-panel">
           <img
-            src="..//assets/imgs/womanPhone.webp"
+            src="../assets/imgs/womanPhone.webp"
             class="image womanArrow"
             loading="lazy"
             alt="Página Cadastro"
