--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -69,21 +69,25 @@
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
+      async
     />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      async
     />
 
     <!-- SweetAlert2 CSS -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+      async
     />
 
     <!-- Links para estilos -->
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../carrinho.css" />
+    <link rel="stylesheet" href="login.css" />
 
     <!-- Script deferido -->
     <script src="../carrinho.js" defer></script>
@@ -106,7 +110,7 @@
     <!-- End Google Tag Manager -->
 
     <!-- Prefetch DNS -->
-    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" async/>
     <link rel="dns-prefetch" href="//fonts.gstatic.com" />
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
 
@@ -178,6 +182,22 @@
           <span class="cart-count">0</span>
         </div>
 
+        <div class="userConfig">
+
+          <div class="buttonConfigUser">
+            <i class="fal fa-user" ></i>
+            <p></p>
+          </div>
+
+          <form action="#" class="sign-in-form buttonMenuUser" id="loginForm">
+            <div class="buttons">
+              <button type="button" title="Sair" class="btn solid" id="logoutButton" onclick="logout()"><i class="far fa-sign-out"></i> Sair </button>
+              <button type="button" class="btn solid" id="loginButton" onclick="login()" title="Fazer Login" style="display: none;"><i class="far fa-sign-out"></i> Fazer Login</button>
+            </div>
+          </form>
+          <h2 class="title"><span>Bem-vindo(a)</span> <strong id="username"></strong></h2>
+        </div>
+
         <div class="iconsMenuMobile">
           <!-- <li class="iconProfile">
             <a href="../pages/login.html"><i class="fal fa-user"></i></a>
@@ -229,14 +249,6 @@
           <button class="checkout-btn buttonAll">Finalizar Compra</button>
         </div>
       </div>
-        <!-- Mostrando usuario logado na page -->
-        <form action="#" class="sign-in-form" id="loginForm">
-          <h2 class="title">Bem vindo <span id="username"></span></h2>
-          <div class="buttons">
-            <button type="button" class="btn solid buttonAll" id="logoutButton" onclick="logout()">Deslogar</button>
-            <button type="button" class="btn solid buttonAll" id="loginButton" onclick="login()" style="display: none;">Logar</button>
-          </div>
-        </form>
     </div>
     <!-- CARROSSEL PROMOÇÕES -->
     <section class="carrossel container" id="carrossel1">
