changed values, images and implementation of whatsapp

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <section id="home" class="bannerInitial">
       <div class="bannerTexts">
         <h1>
-          Gavião Frutas <br />
+          Gavião Frutas
           e Verduras
         </h1>
         <p>
