blocked special offers

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       </figure>
     </section>
 
-    <section class="carrossel container" id="carrossel1">
+    <!-- <section class="carrossel container" id="carrossel1">
       <div class="food-menu">
         <div>
           <h2>Ofertas Especiais</h2>
@@ -246,7 +246,7 @@
         ></div>
         <div class="swiper-pagination swiper-pagination-food"></div>
       </div>
-    </section>
+    </section> -->
 
     <section class="about container" id="about">
       <div class="boxAbout">
@@ -274,7 +274,7 @@
       </div>
     </section>
 
-    <section class="carrossel container" id="carrossel2">
+    <!-- <section class="carrossel container" id="carrossel2">
       <div class="food-menu">
         <div>
           <h1>Ofertas Especiais</h1>
@@ -289,7 +289,7 @@
         ></div>
         <div class="swiper-pagination swiper-pagination-drinks"></div>
       </div>
-    </section>
+    </section> -->
 
     <div class="boxContacts" id="contacts">
       <div class="container">
