--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -239,7 +239,7 @@
         </div>
       </div>
     </div>
-    <section class="carrossel container" id="carrossel1">
+    <!-- <section class="carrossel container" id="carrossel1">
       <div class="food-menu">
         <div>
           <h1>Ofertas Especiais</h1>
@@ -253,7 +253,7 @@
         ></div>
         <div class="swiper-pagination swiper-pagination-food"></div>
       </div>
-    </section>
+    </section> -->
     <section id="food-menu-section">
       <div class="container">
         <div class="titleFoodCategory">
