add link whatsapp in cart index

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <span>TOTAL:</span>
             <span class="subtotal-value">$0.00</span>
           </div>
-          <button class="checkout-btn buttonAll">Finalizar Compra</button>
+          <button target="_blank" class="checkout-btn buttonAll" onclick="sendWhatsAppMessage()">Finalizar Compra</button>
         </div>
       </div>
       
