change beverages products

--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -290,11 +290,11 @@
               Verduras
             </button>
           </div>
-          <!-- <div>
+          <div>
             <button data-food-type="beverages-type" class="buttonAllActive">
               Bebidas
             </button>
-          </div> -->
+          </div>
           <div id="categ"></div>
         </div>
       </div>
